updated to release 6.15

--- a/fhgfs_admon_gui/src/Message_en_US.properties
+++ b/fhgfs_admon_gui/src/Message_en_US.properties
@@ -1,7 +1,7 @@
 Username=Username
 Password=Password
 Login=Login
-If you need support please contact support@beegfs.com.=If\ you\ need\ support\ please\ contact\ support@beegfs.com.
+If\ you\ need\ support\ please\ contact\ support@beegfs.com.=If you need support please contact support@beegfs.com.
 BeeGFS\ is\ a\ project\ of\ the\ Fraunhofer\ ITWM,=BeeGFS is a project of the Fraunhofer ITWM,
 Competence\ Center\ for\ High\ Performance\ Computing.\ =Competence Center for High Performance Computing.
 Close=Close
@@ -36,8 +36,8 @@ Windows=Windows
 Tile=Tile
 Minimize\ All=Minimize All
 About=About
-Please\ insert\ the\ names\ of\ the\ hosts\ to\ add\.\\n\\nCou\ can\ leave\ remaining\ fields\ blank\.=Please insert the names of the hosts to add.nnCou can leave remaining fields blank.
-Please\ choose\ the\ file\ to\ import\.\\n\\nThe\ file\ must\ contain\ one\ host\ per\ line\.=Please choose the file to import.nnThe file must contain one host per line.
+Please\ insert\ the\ names\ of\ the\ hosts\ to\ add\.\n\nYou\ can\ leave\ remaining\ fields\ blank\.=Please insert the names of the hosts to add.\n\nYou can leave remaining fields blank.
+Please\ choose\ the\ file\ to\ import\.\n\nThe\ file\ must\ contain\ one\ host\ per\ line\.=Please choose the file to import.\n\nThe file must contain one host per line.
 Install=Install
 Install\ BeeGFS=Install BeeGFS
 Reload=Reload
@@ -66,15 +66,6 @@ Save=Save
 Reload\ from\ server=Reload from server
 Next\ \-\>=Next ->
 Use\ for\ all=Use for all
-storeMetaDirectory=storeMetaDirectory
-connMetaPortTCP=connMetaPortTCP
-storeStorageDirectory=storeStorageDirectory
-connStoragePortTCP=connStoragePortTCP
-connClientPortTCP=connClientPortTCP
-clientMount=clientMount
-connHelperdPortTCP=connHelperdPortTCP
-storeMgmtdDirectory=storeMgmtdDirectory
-connMgmtdPortTCP=connMgmtdPortTCP
 Create\ basic\ configuration=Create basic configuration
 Define\ roles=Define roles
 Configure\ Infiniband=Configure Infiniband
@@ -304,7 +295,7 @@ If\ a\ custom\ kernel\ is\ used\ ignore\ this\ warning\!=If a custom kernel is u
 The\ kernel\ build\ directory\ is\ missing\ on\ the\ =The kernel build directory is missing on the
 following\ nodes\:=following nodes:
 Installation\ cannot\ be\ performed\ due\ to\ communication\ problems=Installation cannot be performed due to communication problems
-Successfully\ installed\ =\u6210\u529F\u5B89\u88C5
+Successfully\ installed\ =Successfully installed
 on\ all\ hosts=on all hosts
 Failed\ to\ install\ =Failed to install
 on\ host\ =on host
@@ -530,9 +521,9 @@ meta=meta
 Passwordless\ autologin\ for\ Information\ user\ successfully\ enabled=Passwordless autologin for Information user successfully enabled
 Operation\ performed=Operation performed
 Passwordless\ autologin\ for\ Information\ user\ successfully\ disabled=Passwordless autologin for Information user successfully disabled
-Metadata\ nodes\ overview\ \(Group\ \:\ \"\ \+\ group\ \+\ \"\)=Metadata nodes overview (Group : " + group + ")
+Metadata\ nodes\ overview\ \(Group\ \:\ \{0\}\)=Metadata nodes overview (Group : {0})
 nodes\ status=nodes status
-nodes\ status\ \(Group\ \:\ \"\ \+\ this\.group\ \+\ \"\)=nodes status (Group : " + this.group + ")
+nodes\ status\ \(Group\ \:\ \{0\}\)=nodes status (Group : {0})
 waiting\ for\ data\ \.\.\.=waiting for data ...
 Use\ Hostname=Use Hostname
 Use\ DNS\ resolution\ from\ the\ GUI\ host\.=Use DNS resolution from the GUI host.
