--- a/fhgfs_admon_gui/src/Message_zh_CN.properties
+++ b/fhgfs_admon_gui/src/Message_zh_CN.properties
@@ -36,8 +36,8 @@ Windows=\u7A97\u53E3
 Tile=\u6807\u9898
 Minimize\ All=\u6700\u5C0F\u5316
 About=\u5173\u4E8E
-Please\ insert\ the\ names\ of\ the\ hosts\ to\ add\.\\n\\nCou\ can\ leave\ remaining\ fields\ blank\.=\u8BF7\u8F93\u5165\u8981\u6DFB\u52A0\u7684\u4E3B\u673A\u540D
-Please\ choose\ the\ file\ to\ import\.\\n\\nThe\ file\ must\ contain\ one\ host\ per\ line\.=\u8BF7\u9009\u62E9\u8981\u5BFC\u5165\u7684\u6587\u4EF6
+Please\ insert\ the\ names\ of\ the\ hosts\ to\ add\.\n\nYou\ can\ leave\ remaining\ fields\ blank\.=\u8BF7\u8F93\u5165\u8981\u6DFB\u52A0\u7684\u4E3B\u673A\u540D
+Please\ choose\ the\ file\ to\ import\.\n\nThe\ file\ must\ contain\ one\ host\ per\ line\.=\u8BF7\u9009\u62E9\u8981\u5BFC\u5165\u7684\u6587\u4EF6
 Install=\u5B89\u88C5
 Install\ BeeGFS=\u5B89\u88C5BeeGFS
 Reload=\u91CD\u8F7D
@@ -66,15 +66,6 @@ Save=\u4FDD\u5B58
 Reload\ from\ server=\u91CD\u8F7D\u670D\u52A1\u5668
 Next\ \-\>=\u4E0B\u4E00\u6B65->
 Use\ for\ all=\u4F7F\u7528\u6240\u6709
-storeMetaDirectory=\u5B58\u50A8\u5143\u6570\u636E\u76EE\u5F55
-connMetaPortTCP=\u8FDE\u63A5\u6E90\u7AEF\u53E3TCP
-storeStorageDirectory=\u5B58\u50A8\u76EE\u5F55
-connStoragePortTCP=\u8FDE\u63A5\u5B58\u50A8\u7AEF\u53E3TCP
-connClientPortTCP=\u8FDE\u63A5\u5BA2\u6237\u7AEF\u53E3TCP
-clientMount=\u5BA2\u6237\u7AEF\u6302\u8F7D
-connHelperdPortTCP=\u8FDE\u63A5\u8F85\u52A9\u7AEF\u53E3TCP
-storeMgmtdDirectory=\u5B58\u50A8\u7BA1\u7406\u76EE\u5F55
-connMgmtdPortTCP=\u8FDE\u63A5\u7BA1\u7406\u7AEF\u53E3TCP
 Create\ basic\ configuration=\u521B\u5EFA\u57FA\u672C\u914D\u7F6E
 Define\ roles=\u5B9A\u4E49\u89D2\u8272
 Configure\ Infiniband=\u914D\u7F6EInfiniband
@@ -530,9 +521,9 @@ meta=\u5143
 Passwordless\ autologin\ for\ Information\ user\ successfully\ enabled=\u65E0\u5BC6\u7801\u81EA\u52A8\u767B\u5F55\u8BBE\u7F6E\u6210\u529F
 Operation\ performed=\u8BBE\u7F6E\u6210\u529F
 Passwordless\ autologin\ for\ Information\ user\ successfully\ disabled=\u65E0\u5BC6\u7801\u81EA\u52A8\u767B\u5F55\u7981\u7528\u6210\u529F
-Metadata\ nodes\ overview\ \(Group\ \:\ \"\ \+\ group\ \+\ \"\)=\u5143\u6570\u636E\u8282\u70B9\u6982\u8FF0 (Group : " + group + ")
+Metadata\ nodes\ overview\ \(Group\ \:\ \{0\}\)=\u5143\u6570\u636E\u8282\u70B9\u6982\u8FF0 (Group : {0})
 nodes\ status=\u8282\u70B9\u72B6\u6001
-nodes\ status\ \(Group\ \:\ \"\ \+\ this\.group\ \+\ \"\)=\u8282\u70B9\u72B6\u6001 (Group : " + this.group +")
+nodes\ status\ \(Group\ \:\ \{0\}\)=\u8282\u70B9\u72B6\u6001 (Group : {0})
 waiting\ for\ data\ \.\.\.=\u7B49\u5F85\u6570\u636E\u4E2D...
 Use\ Hostname=\u4F7F\u7528\u4E3B\u673A\u540D
 Use\ DNS\ resolution\ from\ the\ GUI\ host\.=\u5728\u56FE\u5F62\u5316\u754C\u9762\u7684\u4E3B\u673A\u4E0A\u4F7F\u7528DNS\u89E3\u6790.
